--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
       background-color: #e0f7ff;
       border-color: #007bff;
     }
+    #dropZone:hover {
+      background-color: #e0f7ff;
+      border-color: #007bff;
+    }
     .image-block {
       margin: 1em 0;
       padding: 1em;
