--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 </head>
 <body>
   <h2>📦 图片压缩器（拖拽或点击上传）</h2>
+  <p>请拖入例如：xxx-160KB.jpg的图片文件</p>
   <div id="dropZone">📂 点击或将图片拖拽到此区域</div>
   <input type="file" id="fileInput" accept="image/*" multiple style="display: none;" />
   <div id="output"></div>
