--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 </head>
 <body>
   <h2>📦 图片压缩器 <button id="themeToggle">🌓</button></h2>
-  <p>请拖入例如：xxx-160KB.jpg 的图片文件，或手动设置目标大小</p>
+  <p>请拖入例如：xxx-160KB.jpg 的图片文件，未定义则160KB</p>
 
   <div class="input-group" style="display: flex; align-items: center; gap: 1em;">
     <label for="forceUseDefault" style="display: flex; align-items: center; gap: 0.4em; white-space: nowrap;">
