--- a/index.html
+++ b/index.html
@@ -808,5 +808,14 @@
       localStorage.setItem('appVersion', APP_VERSION);
     }
   </script>
+  <script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?ed5dc7380b880499808494b9cf6f0f48";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
 </body>
 </html>
