--- a/index.html
+++ b/index.html
@@ -808,6 +808,17 @@
       localStorage.setItem('appVersion', APP_VERSION);
     }
   </script>
+  
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-VZ52ZP6XCX"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-VZ52ZP6XCX');
+</script>
+
   <script>
 var _hmt = _hmt || [];
 (function() {
